--- a/codecuaViet/style.css
+++ b/codecuaViet/style.css
@@ -1,32 +1,125 @@
-html
-{
-    margin : 0;
-    padding : 0;
-    box-sizing : border-box;
+/*
+    body styling
+*/
+body {
+    margin: 50px 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.okay-this-is-crazy
+/*
+    header class Styling
+*/
+@media screen and (max-width: 1000px) {
+    .header {
+       min-height: 500px;  
+       }
+ }
+ .icon-facebook{
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background-image : url("icons8-facebook-30.png");
+    background-size: cover;
+    background-position: center;
+  }
+  .icon-github{
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background-image : url("icons8-github-30.png");
+    background-size: cover;
+    background-position: center;
+  }
+
+ .icon-instagram{
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background-image : url("icons8-instagram-30.png");
+    background-size: cover;
+    background-position: center;
+  }
+/* .icon-facebook
 {
-    background : lightblue;
+    background-image: url("icons8-facebook-30.png");
+} */
+.header  {
+    background-color: #2B3467;
+    color: #EEE;
+    text-align: center;
+    width: auto;
+    height: 400px;
+    border-radius: 5px;
+    padding: 1% 2%;
+    box-shadow: 0 0 25px rgb(0, 0, 0, 0.8);
+    }
+.header p {
+        max-width: 100%;
+        word-wrap: break-word;
+      }
+.about {
+    width: 70%;
+    float: left;
+    text-align: left;
+    padding: 1% 0;
+   
+}
+.about p
+{
+    flex:1;
+}
+.profilePic {
+    width: 30%;
+    float: right;
 }
 
-#My-name
-{
-    color : black;
+.profilePic img {
+    border-radius: 50%;
+    width: 70%;
+    padding: 2px;
 }
 
-.title
+.aboutList li{
+    margin-bottom: 7.5px;
+    font-size: larger;
+}
+
+.bold-text {
+    color: black ;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+#working-at-ptit
 {
-    color :red;
+    text-decoration: none;
+    color : yellow;
 }
 #working-at-ptit:hover
 {
-    color:lightblue;
-    text-decoration:underline;
+    color : red;
 }
-
-.bold-text
-{
-    font-weight: bold;
-    color : black;
-}
+footer {
+    background-color: #f8f8f8;
+    padding: 20px;
+    display : flex;
+    text-align : justify;
+    justify-content: center;   
+  }
+  
+  .social-icons a {
+    display: inline-block;
+    margin: 0 10px;
+    text-decoration: none;
+  }
+  
+  .social-icons a i {
+    font-size: 24px;
+    color: #333;
+  }
+  
+  .social-icons a:hover i {
+    color: lightblue; /* Facebook blue */
+  }
+  
+  
